# EuropeanSoccerDB-RecommendationSystem

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_data_clearning.ipynb  02_data_aggregation.ipynb
notebooks/03_recommendation/: dataset.py  preprocessing.ipynb  simplified_net_construction.ipynb  test_prediction.ipynb  two_tower_net_construction.ipynb  two_tower_net_construction.py
scripts/: download_dataset.py
